# hermes-trading

./: .gitignore  ARCHITECTURE.md  BUGS.md  README.md  RESEARCH_LOG.md  ROADMAP.md  TODO.md  pyproject.toml  readme.txt
hermes_trading/: __init__.py  backtest.py  data.py  display.py  funding.py  hmm_regime.py  loop.py  markov_regime.py  multi_loop.py  positions.py  reflect.py  regime_hold.py  relative_strength.py  run.py  score.py  signals.py  walk_forward.py
research/: adaptive_regime_response_report.md  adaptive_sizing_report.md  adx_gate_report.md  alpha_candidates.md  alpha_risk_execution_audit.md  alpha_risk_execution_report.md  body_range_confirmation_report.md  bot_decision_final_report.md  btc_eth_relative_strength_report.md  current_adaptation_audit.md  current_trading_logic_audit.md  data_freshness_audit.md  decay_monitor_report.md  donchian_markov_report.md  edge_diagnostics.md  eth_vs_btc_supertrend_analysis.md  execution_audit.md  funding_rate_data_audit.md  funding_rate_diagnostics.md  funding_rate_filter_report.md  hmm_regime_report.md  long_short_overlay_report.md  markov_current_findings.md  markov_external_research.md  markov_final_report.md  markov_plan.md  markov_research_log.md  multiasset_supertrend_rs_report.md  multitimeframe_confirmation_report.md  online_walk_forward_report.md  recent_adaptation_final_report.md  recent_adaptation_sizing_report.md  recent_regime_failure_report.md  rolling_decay_report.md  signal_improvement_plan.md  supertrend_48mo_report.md  supertrend_report.md  supertrend_short_report.md  timeframe_comparison_report.md  (+2 more)
(+135 files in other folders)
