[project]
name = "hermes-trading"
version = "0.1.0"
description = "Self-improving paper-trading worker"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "rich>=13.0",
    "hmmlearn>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_trading"]
